// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Canonical Story Page A11y I can see the skip to content link 1`] = `"Сайтка өтүү"`;

exports[`Canonical Story Page Analytics ATI 1`] = `"<img height=\\"1px\\" width=\\"1px\\" alt=\\"\\" style=\\"position:absolute\\" src=\\"https://logws1363.ati-host.net?s=598343&amp;s2=58&amp;p=story::kyrgyz.story.23292889.page&amp;x1=[urn:bbc:cps:bb9390aa-4b35-e448-b295-cbd7369fe457]&amp;x2=[responsive]&amp;x3=[news-kyrgyz]&amp;x4=[ky]&amp;x7=[article]&amp;x8=[simorgh-nojs]&amp;x9=[Test+STY+for+social+embeds+-+BBC+News+Кыргыз+Кызматы]&amp;x11=[2020-04-24T14:51:17.000Z]&amp;x12=[2020-04-24T14:51:17.000Z]\\"/>"`;

exports[`Canonical Story Page Footer I can click on the BBC branding and it would take me to the homepage 1`] = `"/kyrgyz"`;

exports[`Canonical Story Page Footer I can see the footer copyright and external linking text 1`] = `"© 2020 BBC. Би-Би-Си сырткы интернет сайттардын мазмуну үчүн жооптуу эмес. Башка интернет сайттардын мазмуну боюнча биздин позиция."`;

exports[`Canonical Story Page Footer Link should match text and url 1`] = `
Object {
  "text": "BBC News, Кыргыз КызMATы",
  "url": "/kyrgyz",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 2`] = `
Object {
  "text": "Эмнеге BBC News ишенсе болот?",
  "url": "https://www.bbc.com/kyrgyz/institutional-49677275",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 3`] = `
Object {
  "text": "Колдонуу эрежелери",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157280",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 4`] = `
Object {
  "text": "Би-Би-Си жөнүндө",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157281",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 5`] = `
Object {
  "text": "Купуялык",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157282",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 6`] = `
Object {
  "text": "Cookies",
  "url": "https://www.bbc.co.uk/privacy/cookies/managing/cookie-settings.html",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 7`] = `
Object {
  "text": "Би-Би-Си менен байланышыңыз",
  "url": "https://www.bbc.com/kyrgyz/institutional-38157284",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 8`] = `
Object {
  "text": "AdChoices / Do Not Sell My Info",
  "url": "https://www.bbc.com/usingthebbc/cookies/how-can-i-change-my-bbc-cookie-settings/",
}
`;

exports[`Canonical Story Page Footer Link should match text and url 9`] = `
Object {
  "text": "Башка интернет сайттардын мазмуну боюнча биздин позиция.",
  "url": "https://www.bbc.co.uk/help/web/links/",
}
`;

exports[`Canonical Story Page Header I can see the branding 1`] = `"BBC News, Кыргыз КызMATы"`;

exports[`Canonical Story Page Header Navigation link should match text and url 1`] = `
Object {
  "text": "Башталгыч бет",
  "url": "/kyrgyz",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 2`] = `
Object {
  "text": "Кыргызстан",
  "url": "/kyrgyz/kyrgyzstan",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 3`] = `
Object {
  "text": "Дүйнө",
  "url": "/kyrgyz/world",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 4`] = `
Object {
  "text": "Сапар TV",
  "url": "/kyrgyz/sapartv",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 5`] = `
Object {
  "text": "Видео",
  "url": "/kyrgyz/media/video",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 6`] = `
Object {
  "text": "Маданият/Илим",
  "url": "/kyrgyz/entertainment",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 7`] = `
Object {
  "text": "Журнал",
  "url": "/kyrgyz/magazine",
}
`;

exports[`Canonical Story Page Header Navigation link should match text and url 8`] = `
Object {
  "text": "Блог",
  "url": "/kyrgyz/blog",
}
`;

exports[`Canonical Story Page Lead image I can see an image with a caption 1`] = `"Сүрөттүн түшүндүрмөсү, Social media"`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 1`] = `
Object {
  "sizes": null,
  "url": "http://localhost:7080/kyrgyz/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 2`] = `
Object {
  "sizes": "72x72",
  "url": "https://news.files.bbci.co.uk/include/articles/public/kyrgyz/images/icons/icon-72x72.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 3`] = `
Object {
  "sizes": "96x96",
  "url": "https://news.files.bbci.co.uk/include/articles/public/kyrgyz/images/icons/icon-96x96.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 4`] = `
Object {
  "sizes": "128x128",
  "url": "https://news.files.bbci.co.uk/include/articles/public/kyrgyz/images/icons/icon-128x128.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 5`] = `
Object {
  "sizes": "144x144",
  "url": "https://news.files.bbci.co.uk/include/articles/public/kyrgyz/images/icons/icon-144x144.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 6`] = `
Object {
  "sizes": "152x152",
  "url": "https://news.files.bbci.co.uk/include/articles/public/kyrgyz/images/icons/icon-152x152.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 7`] = `
Object {
  "sizes": "180x180",
  "url": "https://news.files.bbci.co.uk/include/articles/public/kyrgyz/images/icons/icon-180x180.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 8`] = `
Object {
  "sizes": "192x192",
  "url": "https://news.files.bbci.co.uk/include/articles/public/kyrgyz/images/icons/icon-192x192.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 9`] = `
Object {
  "sizes": "384x384",
  "url": "https://news.files.bbci.co.uk/include/articles/public/kyrgyz/images/icons/icon-384x384.png",
}
`;

exports[`Canonical Story Page SEO Apple Touch Icon should match attributes 10`] = `
Object {
  "sizes": "512x512",
  "url": "https://news.files.bbci.co.uk/include/articles/public/kyrgyz/images/icons/icon-512x512.png",
}
`;

exports[`Canonical Story Page SEO Canonical link 1`] = `"http://localhost:7080/kyrgyz/23292889"`;

exports[`Canonical Story Page SEO Dir attribute 1`] = `"ltr"`;

exports[`Canonical Story Page SEO FB admins 1`] = `"100004154058350"`;

exports[`Canonical Story Page SEO FB app ID 1`] = `"1609039196070050"`;

exports[`Canonical Story Page SEO Heading level 1 1`] = `"Test STY for social embeds"`;

exports[`Canonical Story Page SEO Lang attribute 1`] = `"ky"`;

exports[`Canonical Story Page SEO Linked data should match text 1`] = `
Object {
  "@context": "http://schema.org",
  "@graph": Array [
    Object {
      "@type": "NewsArticle",
      "author": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
          "width": 1024,
        },
        "name": "BBC News Кыргыз Кызматы",
        "noBylinesPolicy": "https://www.bbc.com/kyrgyz/institutional-49677275#authorexpertise",
      },
      "dateModified": "2020-04-24T14:51:17.000Z",
      "datePublished": "2020-04-24T14:51:17.000Z",
      "description": "A test STY for social embeds",
      "headline": "Test STY for social embeds",
      "image": Object {
        "@type": "ImageObject",
        "height": 576,
        "url": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
        "width": 1024,
      },
      "mainEntityOfPage": Object {
        "@id": "http://localhost:7080/kyrgyz/23292889",
        "@type": "WebPage",
        "name": "Test STY for social embeds",
      },
      "publisher": Object {
        "@type": "NewsMediaOrganization",
        "logo": Object {
          "@type": "ImageObject",
          "height": 576,
          "url": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
          "width": 1024,
        },
        "name": "BBC News Кыргыз Кызматы",
        "publishingPrinciples": "https://www.bbc.com/kyrgyz/institutional-49677275",
      },
      "thumbnailUrl": "https://news.files.bbci.co.uk/ws/img/logos/og/kyrgyz.png",
      "url": "http://localhost:7080/kyrgyz/23292889",
    },
  ],
}
`;

exports[`Canonical Story Page SEO OG description 1`] = `"A test STY for social embeds"`;

exports[`Canonical Story Page SEO OG image 1`] = `"http://ichef.test.bbci.co.uk/news/1024/branded_kyrgyz/CF33/test/_63734035_socialmedia.jpg"`;

exports[`Canonical Story Page SEO OG image alt 1`] = `"social media"`;

exports[`Canonical Story Page SEO OG locale 1`] = `"ky-KG"`;

exports[`Canonical Story Page SEO OG site name 1`] = `"BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page SEO OG title 1`] = `"Test STY for social embeds - BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page SEO OG type 1`] = `"article"`;

exports[`Canonical Story Page SEO OG url 1`] = `"http://localhost:7080/kyrgyz/23292889"`;

exports[`Canonical Story Page SEO Page title 1`] = `"Test STY for social embeds - BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page SEO Robots meta tag 1`] = `"noodp,noydir"`;

exports[`Canonical Story Page SEO Twitter card 1`] = `"summary_large_image"`;

exports[`Canonical Story Page SEO Twitter creator 1`] = `"@bbckyrgyz"`;

exports[`Canonical Story Page SEO Twitter description 1`] = `"A test STY for social embeds"`;

exports[`Canonical Story Page SEO Twitter image alt 1`] = `"social media"`;

exports[`Canonical Story Page SEO Twitter image src 1`] = `"http://ichef.test.bbci.co.uk/news/1024/branded_kyrgyz/CF33/test/_63734035_socialmedia.jpg"`;

exports[`Canonical Story Page SEO Twitter site 1`] = `"@bbckyrgyz"`;

exports[`Canonical Story Page SEO Twitter title 1`] = `"Test STY for social embeds - BBC News Кыргыз Кызматы"`;

exports[`Canonical Story Page Social Embeds I can see a link to the original content in a fallback 1`] = `"Facebook баракчадан көбүрөк пост окуу"`;

exports[`Canonical Story Page Social Embeds I can see the caption accompanying a YouTube embed 1`] = `"Видеонун түшүндүрмөсү, Эскертүү: Жарнамалар болушу ыктымал"`;

exports[`Canonical Story Page Social Embeds I can see the skip link 1`] = `"YouTube баракчаны өткөрүп жиберүү, пост, 1"`;

exports[`Canonical Story Page Social Embeds I can see the skip link destination 1`] = `"YouTube посттун аягы, 1"`;
